[gd_scene load_steps=5 format=3 uid="uid://cly3pdgatmiw2"]

[ext_resource type="PackedScene" uid="uid://cr0jqavpandfy" path="res://Nodes/Enemies/enemy.tscn" id="1_uus8m"]
[ext_resource type="Script" uid="uid://cqer56dspv1q6" path="res://Nodes/Enemies/enemy_dumb_fire.gd" id="2_gbajs"]
[ext_resource type="PackedScene" uid="uid://dvgiyukkhh0d5" path="res://Nodes/Spawners/bullet_spawner.tscn" id="3_cl5qq"]
[ext_resource type="PackedScene" uid="uid://cwt3q0k5oqiej" path="res://Nodes/Bullet Patterns/bullet_pattern_node.tscn" id="4_lhdry"]

[node name="enemy" instance=ExtResource("1_uus8m")]
script = ExtResource("2_gbajs")
speed = 50.0

[node name="bullet_spawner" parent="." index="3" instance=ExtResource("3_cl5qq")]
position = Vector2(0, 7)

[node name="bullet_pattern_node" parent="." index="4" instance=ExtResource("4_lhdry")]
bullet_pattern_type = 2

[node name="shooting_timer" type="Timer" parent="." index="5"]

[connection signal="timeout" from="shooting_timer" to="." method="_on_shooting_timer_timeout"]
